<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="onClickItemVowel"
            type="android.view.View.OnClickListener" />

        <variable
            name="onClickItemConsonant"
            type="android.view.View.OnClickListener" />

        <variable
            name="onClickItemRhyme"
            type="android.view.View.OnClickListener" />

        <variable
            name="onClickItemTone"
            type="android.view.View.OnClickListener" />

        <import type="android.view.View" />
    </data>

    <LinearLayout
        android:layout_width="@dimen/dp_170"
        android:layout_height="wrap_content"
        android:background="@drawable/border_menu_character"
        android:orientation="vertical"
        android:padding="@dimen/dp_1">

        <LinearLayout
            android:id="@+id/item_vowel"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/ic_item_menu"
            android:clickable="true"
            android:onClick="@{ onClickItemVowel }"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_vowel_text"
                android:layout_width="@dimen/dp_130"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/menu_character_vowwel"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_12"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/item_vowel_img"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@drawable/ic_home_search_orange" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/black_text" />

        <LinearLayout
            android:id="@+id/item_consonant"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/ic_item_menu"
            android:clickable="true"
            android:onClick="@{ onClickItemConsonant }"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_consonant_text"
                android:layout_width="@dimen/dp_130"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/menu_character_consonant"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_12"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/item_consonant_img"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@drawable/ic_home_search_orange" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/black_text" />

        <LinearLayout
            android:id="@+id/item_rhyme"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/ic_item_menu"
            android:clickable="true"
            android:onClick="@{ onClickItemRhyme }"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_rhyme_text"
                android:layout_width="@dimen/dp_130"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/menu_character_rhyme"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_12"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/item_rhyme_img"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@drawable/ic_home_search_orange" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/black_text" />

        <LinearLayout
            android:id="@+id/item_tone"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_40"
            android:background="@drawable/ic_item_menu"
            android:clickable="true"
            android:onClick="@{ onClickItemTone }"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/item_tone_text"
                android:layout_width="@dimen/dp_130"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/menu_character_tone"
                android:textColor="@color/colorWhite"
                android:textSize="@dimen/sp_12"
                android:textStyle="italic" />

            <ImageView
                android:id="@+id/item_tone_img"
                android:layout_width="@dimen/dp_20"
                android:layout_height="@dimen/dp_20"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="@dimen/dp_10"
                android:layout_marginEnd="@dimen/dp_10"
                android:background="@drawable/ic_home_search_orange" />
        </LinearLayout>
    </LinearLayout>
</layout>
