<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="dialog"
            type="gmail.vuthanhvt.dictionary.screen.mongviet.view.EditWordDialogFragment" />

        <import type="android.view.View" />
        <import type="android.text.TextUtils" />
    </data>

    <LinearLayout
        android:layout_width="@dimen/dp_300"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="64dp"
            android:background="@color/background_dialog"
            android:gravity="center_vertical|start"
            android:paddingStart="@dimen/dp_20"
            android:paddingEnd="@dimen/dp_20"
            android:scaleType="center"
            android:text="@string/msg_dialog"
            android:textSize="@dimen/sp_16"
            android:textStyle="bold" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/dp_30"
                android:text="@{ dialog.mIsMongViet ? @string/msg_hmongword : @string/msg_vietnamword }"
                android:textColor="@color/black_text"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/word_tv"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="1"
                android:paddingStart="@dimen/dp_5"
                android:textColor="@color/edittext_hint"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold"
                android:text="@{ dialog.mWordField }"
                tools:text="Tieng Viet" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/grey_1"
            android:paddingStart="@dimen/dp_30"
            android:paddingEnd="@dimen/dp_30" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/dp_30"
                android:text="@{ dialog.mIsMongViet ? @string/msg_vietnamword : @string/msg_hmongword }"
                android:textColor="@color/black_text"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/meaning_of_word"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:backgroundTint="@color/edittext_hint"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@{ dialog.mIsMongViet ? @string/activity_vietmong_hmongword : @string/activity_vietmong_vietnamword }"
                android:maxLines="1"
                android:paddingStart="@dimen/dp_5"
                android:textColor="@color/edittext_hint"
                android:textColorHint="@color/grey_1"
                android:textSize="@dimen/sp_12"
                android:text="@{ dialog.mMeaningOfWordField }"/>
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_0_5"
            android:background="@color/grey_1"
            android:paddingStart="@dimen/dp_30"
            android:paddingEnd="@dimen/dp_30" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/dp_35"
            android:orientation="horizontal">

            <TextView
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="4"
                android:gravity="center_vertical"
                android:paddingStart="@dimen/dp_30"
                android:text="@string/msg_reading"
                android:textColor="@color/black_text"
                android:textSize="@dimen/sp_12"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/reading"
                android:layout_width="@dimen/dp_0"
                android:layout_height="match_parent"
                android:layout_weight="6"
                android:backgroundTint="@color/edittext_hint"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:hint="@string/activity_vietmong_reading"
                android:maxLines="1"
                android:paddingStart="@dimen/dp_5"
                android:textColor="@color/edittext_hint"
                android:textColorHint="@color/grey_1"
                android:textSize="@dimen/sp_12"
                android:text="@{ dialog.mReadingField }"/>
        </LinearLayout>
    </LinearLayout>
</layout>